--- a/Assignment 1/CV/index.html
+++ b/Assignment 1/CV/index.html
@@ -23,8 +23,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 shadow">
-          <h2>Janine Patterson</h2>
-          <h4>Assistant Manager</h4>
+          <h2>Sakinah Abdul</h2>
+          <h4>Otago Polytechnic Student of Information Technology</h4>
         </div>
       </div>
 
@@ -33,13 +33,13 @@
           <h4>Contact Details</h4>
           <ul class="list-unstyled">
             <li>12 Murphy Street</li>
-            <li>Ponsonby</li>
-            <li>Auckland 5671</li>
+            <li>Caversham</li>
+            <li>Dunedin 5671</li>
           </ul>
           <ul class="list-unstyled">
             <li>Phone: (04) 909 000</li>
             <li>Mobile: 029 567 2341</li>
-            <li>Email: janine.patterson@email.com</li>
+            <li>Email: abduhs1@otagopolytechnic.com</li>
           </ul>
         </div>
 
@@ -51,36 +51,36 @@
 
       <div class="row">
         <div class="col-md-8 shadow">
-          <h2>Work experience:</h2>
+          <h2>Work experience</h2>
           <ul class="list-unstyled">
-            <li><strong>Assistant manager</strong>, Electric Al’s, Auckland</li>
-            <li>June 2011 – Present</li>
-            <li>My role involves leading a team of five staff at a busy Auckland-based electronics store, Electric Al’s. As well as managing my team, I am involved in wider company decision making, including policy and purchasing decisions.</li>
+            <li><strong>IT Inquiry</strong>, Noel Leeming, Dunedin</li>
+            <li>June 2014 – 2015</li>
+            <li>My job was to provide information on the hardware specs of the computer as well building custom computers depending on the specs the customer had provided.</li>
           </ul>
           <ul class="list-unstyled">
-            <li><strong>Sales Representative</strong>, FonesRus, Auckland</li>
-            <li>February 2009 – April 2011</li>
-            <li>I worked as part of a dedicated sales team for the independent mobile phone outlet, FonesRus. My job was primarily customer-focused, but also involved stock purchasing.</li>
+            <li><strong>Sales Representative</strong>, Gadgetron, Dunedin</li>
+            <li>February 2013 – April 2013</li>
+            <li>I maintained the stock purchases and helped customers in providing information about the phone and choosing a proper device suited for their needs.</li>
           </ul>
           <ul class="list-unstyled">
-            <li><strong>Delicatessen Assistant</strong>, Supermarket City, Wellington</li>
-            <li>June 2007 – December 2008</li>
-            <li>This was a part-time job I did while completing my Bachelor of Commerce at Victoria University of Wellington. The role helped develop my sales and customer service skills.</li>
+            <li><strong>Library Assistant</strong>, Public Library, Dunedin</li>
+            <li>June 2010 – December 2012</li>
+            <li>This was a part-time job I did. The role helped develop customer service skills and helped me understood the library's database maintenance software, and therefore my skill as a developer and database maintainer.</li>
           </ul>
         </div>
 
         <div class="col-md-4 personal-profile shadow">
           <h4>Personal Profile</h4>
-          <p>I currently work as an assistant manager at an electronics store but am looking to further develop my sales and management skills. I am passionate about keeping up to date with the latest technologies coming on the market and dedicated to working in the electronics retail industry.</p>
+          <p>I am currently a student at Otago Polytechnic but am looking to further develop my sales and management skills. I am passionate on advancing my knowledge on the IT industry and dedicated in working in a team or solo in for software maintaining project to custom computer building.</p>
         </div>
 
         <div class="col-md-4 key-skills shadow">
           <h4>Key skills</h4>
           <ul>
-            <li>Planning and implementing advertising campaigns and branding strategies.</li>
-            <li>Hiring, training and overseeing staff.</li>
-            <li>Creating a social media presence, which saw a 25% increase in visits to Electric Al’s website.</li>
-            <li>Successfully project managing the establishment of Electric Al’s Porirua branch, which opened in December 2012.</li>
+            <li>Able to work in project teams</li>
+            <li>Capable of creating mobile app</li>
+            <li>Able to create low-maintenance software</li>
+            <li>Know how to work on previous softwares</li>
           </ul>
         </div>
       </div>
@@ -89,24 +89,24 @@
         <div class="col-md-8 shadow">
           <h2>Education</h2>
           <ul class="list-unstyled">
-            <li><strong>Bachelor of Commerce</strong>, (marketing major) </li>
-            <li>Victoria University of Wellington, 2008 (academic transcript available on request).</li>
+            <li><strong>Bachelor of Information Technology</strong>, (computer science major) </li>
+            <li>Otago Polytechnic, July 2014 - onward (academic transcript available on request).</li>
           </ul>
         </div>
 
         <div class="col-md-4 references shadow">
           <h4>References</h4>
           <ul class="list-unstyled">
-            <li><strong>Jan Claremont</strong>, Manager, Electric Al’s, Auckland</li>
+            <li><strong>Dan Bonza</strong>, Manager, Noel Leeming, Dunedin</li>
             <li>Phone: (09) 382 78544</li>
             <li>Mobile: 020626341</li>
-            <li>Email: jan.claremont@comptele.co.nz</li>
+            <li>Email: dan.<bdi dir="auto"></bdi>@comptele.co.nz</li>
           </ul>
           <ul class="list-unstyled">
-            <li><strong>Rick Wylde</strong>, Owner, FonesRus, Wellington</li>
+            <li><strong>Wilbur White</strong>, Owner, Gadgetron, Dunedin</li>
             <li>Phone: (04) 055 3586</li>
             <li>Mobile: 020 852 369</li>
-            <li>Email: rick.wylde@freemail.com</li>
+            <li>Email: wwhite@freemail.com</li>
           </ul>
 
         </div>
